<resources>
    <string name="app_name">hbc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="need_blood">我需要血</string>
    <string name="donate_blood">我要捐血</string>
    <string name="donate">我要捐款</string>
    <string name="member">我的資訊</string>

    <string name="email">Email</string>
    <string name="password">密碼</string>
    <string name="repassword">確認密碼</string>
    <string name="city">縣市</string>
    <string name="common">：</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="forget_password">忘記密碼</string>
    <string name="reset_password">重設密碼</string>
    <string name="validate_code">認證碼</string>

    <string name="submit">送出</string>
    <string name="cancel">取消</string>

    <string name="cat">貓</string>
    <string name="dog">狗</string>

    <string name="show_dialog">Show dialog</string>
    <string name="show_custom_dialog">Show custom dialog</string>
    <string name="ok">OK</string>
    <string name="greetings_sent_successfully">Greetings sent successfully</string>

</resources>