<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_height"
    android:background="@drawable/bottom">


    <LinearLayout
        android:id="@+id/need_bloodTabContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/need_bloodTabIcon"
            android:layout_width="@dimen/bottom_icon_width"
            android:layout_height="@dimen/bottom_icon_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottom_icon_marginTop"
            app:srcCompat="@drawable/need_blood_out" />

        <TextView
            android:id="@+id/need_bloodTabTitle"
            style="@style/bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_height"
            android:layout_gravity="center"
            android:text="@string/need_blood" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/donate_bloodTabContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/donate_bloodTabIcon"
            android:layout_width="@dimen/bottom_icon_width"
            android:layout_height="@dimen/bottom_icon_height"
            android:layout_marginTop="@dimen/bottom_icon_marginTop"
            app:srcCompat="@drawable/donate_blood_out" />

        <TextView
            android:id="@+id/donate_bloodTabTitle"
            style="@style/bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_height"
            android:text="@string/donate_blood" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/donateTabContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/donateTabIcon"
            android:layout_width="@dimen/bottom_icon_width"
            android:layout_height="@dimen/bottom_icon_height"
            android:layout_marginTop="@dimen/bottom_icon_marginTop"
            app:srcCompat="@drawable/donate_out" />

        <TextView
            android:id="@+id/donateTabTitle"
            style="@style/bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_height"
            android:text="@string/donate" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/memberTabContainer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/memberTabIcon"
            android:layout_width="@dimen/bottom_icon_width"
            android:layout_height="@dimen/bottom_icon_height"
            android:layout_marginTop="@dimen/bottom_icon_marginTop"
            app:srcCompat="@drawable/member_out" />

        <TextView
            android:id="@+id/memberTabTitle"
            style="@style/bottom_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_text_height"
            android:text="@string/member" />

    </LinearLayout>
</LinearLayout>