<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MY_WHITE"
    android:orientation="vertical"
    tools:context=".controllers.MyPetActivity">

    <tw.com.bluemobile.hbc.views.Top
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:layout_alignParentTop="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top"
        android:layout_above="@id/submit"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <tw.com.bluemobile.hbc.views.EditTextNormal
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:key="name"
                app:titleTV="名稱" />

            <tw.com.bluemobile.hbc.views.TwoRadio
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:twoKey="type"
                app:twoRadioTitleTV="品種"
                app:yesRadioTitle="@string/cat"
                app:noRadioTitle="@string/dog"
                app:star="true"
                app:twoRadioTitleWidth="130"
                />

            <tw.com.bluemobile.hbc.views.EditTextUnit
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:unit="歲"
                app:unitKeyboard="number"
                app:unitTitleTV="年齡" />

            <tw.com.bluemobile.hbc.views.EditTextUnit
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:unit="公斤"
                app:unitKeyboard="number"
                app:unitTitleTV="體重" />

            <tw.com.bluemobile.hbc.views.EditTextNormal
                android:id="@+id/blood"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:key="blood"
                app:titleTV="血型" />

            <tw.com.bluemobile.hbc.views.TwoRadio
                android:id="@+id/donateBlood"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:twoKey="donateBlood"
                app:twoRadioTitleTV="是否願意配對成為輸血英雄"
                app:yesRadioTitle="願意"
                app:noRadioTitle="不願意"
                app:star="true"
                app:twoRadioTitleWidth="230"
                />

            <tw.com.bluemobile.hbc.views.EditTextUnit
                android:id="@+id/traffic_fee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:unit="元"
                app:unitKeyboard="number"
                app:unitTitleTV="車馬費設定(每500公尺)"
                app:unitTitleLLWidth="230"
                app:unitValueLLWidth="150"
                app:unitValueETWidth="80"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/ACTION_BACKGROUND"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/button_submit"
            android:layout_width="224dp"
            android:layout_height="35dp"
            android:background="@drawable/button_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/MY_BLACK" />

    </LinearLayout>



    <include layout="@layout/loading" />

</RelativeLayout>