<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MY_WHITE"
    android:orientation="vertical"
    tools:context=".controllers.NeedBloodEditActivity">

    <tw.com.bluemobile.hbc.views.Top
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:layout_alignParentTop="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/submitLL"
        android:layout_below="@id/top"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <tw.com.bluemobile.hbc.views.More
                android:id="@+id/hospital_token"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:key="hospital_name"
                app:moreTitleTV="醫院" />

            <tw.com.bluemobile.hbc.views.EditTextNormal
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:key="name"
                app:titleTV="寶貝名稱" />

            <tw.com.bluemobile.hbc.views.TwoRadio
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:noRadioTitle="@string/dog"
                app:twoKey="type"
                app:twoRadioStarIV="true"
                app:twoRadioTitleTV="寶貝類型"
                app:twoRadioTitleWidth="130"
                app:yesRadioTitle="@string/cat" />

            <tw.com.bluemobile.hbc.views.ThreeRadio
                android:id="@+id/blood_type_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:threeKey="blood_type"
                app:threeRadioTitleTV="血液類型"
                app:threeRadioStarIV="true"
                app:threeRadioTitleWidth="130"
                app:oneRadioTitle="A"
                app:twoRadioTitle="B"
                app:threeRadioTitle="AB"
                android:visibility="visible"
                />

            <tw.com.bluemobile.hbc.views.TwoRadio
                android:id="@+id/blood_type_dog"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:twoKey="blood_type"
                app:twoRadioTitleTV="血液類型"
                app:twoRadioStarIV="true"
                app:yesRadioTitle="DEA1陽性"
                app:noRadioTitle="DEA1陰性"
                app:twoRadioTitleWidth="130"
                app:yesRadioWidth="110"
                app:noRadioWidth="110"
                android:visibility="gone"/>

            <tw.com.bluemobile.hbc.views.EditTextUnit
                android:id="@+id/traffic_fee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:unit="元"
                app:unitKeyboard="number"
                app:unitStarIV="false"
                app:unitTitleLLWidth="210"
                app:unitTitleTV="車馬費"
                app:unitValueETWidth="80"
                app:unitValueLLWidth="150" />

            <tw.com.bluemobile.hbc.views.EditTextUnit
                android:id="@+id/nutrient_fee"
                android:layout_width="match_parent"
                android:layout_height="@dimen/formitem_container_height"
                android:layout_marginTop="@dimen/formitem_container_marginTop"
                app:unit="元"
                app:unitKeyboard="number"
                app:unitStarIV="false"
                app:unitTitleLLWidth="210"
                app:unitTitleTV="營養費"
                app:unitValueETWidth="80"
                app:unitValueLLWidth="150" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/submitLL"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_above="@id/bottom"
        android:layout_centerInParent="true"
        android:background="@color/ACTION_BACKGROUND"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/button_submit"
            android:layout_width="224dp"
            android:layout_height="35dp"
            android:background="@drawable/button_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/MY_BLACK" />

    </LinearLayout>

    <tw.com.bluemobile.hbc.views.Bottom
        android:id="@id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_alignParentBottom="true" />


    <include layout="@layout/loading" />

</RelativeLayout>